--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -2492,8 +2492,7 @@ spec:
                           description: Server name
                           type: string
                         persistRepos:
-                          description: PersistRepos enables persistent volumes for
-                            KIE Server's kie and maven repositories
+                          description: Persist the Maven and KIE repositories on ~/.m2/repository and ~/.kie/repository respectively. The option persistRepos will be automatically set to false when the Trial environment is set.
                           type: boolean
                         replicas:
                           description: Replicas to set for the DeploymentConfig
@@ -5394,8 +5393,7 @@ spec:
                               description: Server name
                               type: string
                             persistRepos:
-                              description: PersistRepos enables persistent volumes
-                                for KIE Server's kie and maven repositories
+                              description: Persist the Maven and KIE repositories on ~/.m2/repository and ~/.kie/repository respectively. The option persistRepos will be automatically set to false when the Trial environment is set.
                               type: boolean
                             replicas:
                               description: Replicas to set for the DeploymentConfig
