--- a/deploy/olm-catalog/test/7.13.0-1/manifests/kieapp.crd.yaml
+++ b/deploy/olm-catalog/test/7.13.0-1/manifests/kieapp.crd.yaml
@@ -1629,7 +1629,10 @@ spec:
                         set, or for multiple sets if deployments is set to >1
                       properties:
                         MDBMaxSession:
-                          description: MDBMaxSession number of KIE Executor sessions
+                          description: MDBMaxSession number of max KIE Executor session,
+                            it must be lower than the value of max-pool-size passed
+                            as jboss.mdb.strict.max.pool.size, if leaved empty if
+                            leaved empty the max.pool.size will be set to 60s
                           type: integer
                         build:
                           description: KieAppBuildObject Data to define how to build
@@ -4502,7 +4505,11 @@ spec:
                             to >1
                           properties:
                             MDBMaxSession:
-                              description: MDBMaxSession number of KIE Executor sessions
+                              description: MDBMaxSession number of max KIE Executor
+                                session, it must be lower than the value of max-pool-size
+                                passed as jboss.mdb.strict.max.pool.size, if leaved
+                                empty if leaved empty the max.pool.size will be set
+                                to 60s
                               type: integer
                             build:
                               description: KieAppBuildObject Data to define how to
