[RHPAM-4218] -  Matching the description in Operator UI and KieApp CRD for persistRepos
Signed-off-by: Achyut Madhusudan <amadhusu@redhat.com>

--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -2499,8 +2499,10 @@ spec:
                           description: Server name
                           type: string
                         persistRepos:
-                          description: PersistRepos enables persistent volumes for
-                            KIE Server's kie and maven repositories
+                          description: Persist the Maven and KIE repositories on ~/.m2/repository
+                            and ~/.kie/repository respectively. The option persistRepos
+                            will be automatically set to false when the Trial environment
+                            is set.
                           type: boolean
                         replicas:
                           description: Replicas to set for the DeploymentConfig
@@ -5411,8 +5413,10 @@ spec:
                               description: Server name
                               type: string
                             persistRepos:
-                              description: PersistRepos enables persistent volumes
-                                for KIE Server's kie and maven repositories
+                              description: Persist the Maven and KIE repositories
+                                on ~/.m2/repository and ~/.kie/repository respectively.
+                                The option persistRepos will be automatically set
+                                to false when the Trial environment is set.
                               type: boolean
                             replicas:
                               description: Replicas to set for the DeploymentConfig
