[RHPAM-4140] Hide adminPassword from Business automation operator kieapp instance
Signed-off-by: desmax74 <mdessi@redhat.com>

--- a/rhpam-config/7.13.0/common.yaml
+++ b/rhpam-config/7.13.0/common.yaml
@@ -84,10 +84,24 @@ console:
                     value: "/opt/kie/data/configuration/application-users.properties"
                   - name: APPLICATION_ROLES_PROPERTIES
                     value: "/opt/kie/data/configuration/application-roles.properties"
+                  #[[if not .SecretAdminCredentials]]
                   - name: KIE_ADMIN_USER
                     value: "[[.AdminUser]]"
                   - name: KIE_ADMIN_PWD
                     value: "[[.AdminPassword]]"
+                  #[[end]]
+                  #[[if .SecretAdminCredentials]]
+                  - name: KIE_ADMIN_USER
+                    valueFrom:
+                      secretKeyRef:
+                        name: "[[.SecretAdminCredentials]]"
+                        key: username
+                  - name: KIE_ADMIN_PWD
+                    valueFrom:
+                      secretKeyRef:
+                        name: "[[.SecretAdminCredentials]]"
+                        key: password
+                  #[[end]]
                   - name: KIE_MBEANS
                     value: enabled
                   #[[if or .Console.GitHooks.MountPath .Console.GitHooks.From]]
@@ -561,10 +575,24 @@ smartRouter:
                   - name: KIE_SERVER_ROUTER_TLS_KEYSTORE
                     value: "/etc/smartrouter-secret-volume/keystore.jks"
                   #[[end]]
+                  #[[if not .SecretAdminCredentials]]
                   - name: KIE_ADMIN_USER
                     value: "[[.AdminUser]]"
                   - name: KIE_ADMIN_PWD
                     value: "[[.AdminPassword]]"
+                  #[[end]]
+                  #[[if .SecretAdminCredentials]]
+                  - name: KIE_ADMIN_USER
+                    valueFrom:
+                      secretKeyRef:
+                        name: "[[.SecretAdminCredentials]]"
+                        key: username
+                  - name: KIE_ADMIN_PWD
+                    valueFrom:
+                      secretKeyRef:
+                        name: "[[.SecretAdminCredentials]]"
+                        key: password
+                  #[[end]]
                   - name: KIE_SERVER_CONTROLLER_SERVICE
                     value: "[[.ApplicationName]]-[[.Console.Name]]"
                   - name: KIE_SERVER_CONTROLLER_PROTOCOL
@@ -771,10 +799,24 @@ servers:
                     - name: KIE_SERVER_CONTROLLER_PROTOCOL
                       value: ws
                     #[[end]]
+                    #[[if not $.SecretAdminCredentials]]
                     - name: KIE_ADMIN_USER
                       value: "[[$.AdminUser]]"
                     - name: KIE_ADMIN_PWD
                       value: "[[$.AdminPassword]]"
+                    #[[end]]
+                    #[[if $.SecretAdminCredentials]]
+                    - name: KIE_ADMIN_USER
+                      valueFrom:
+                        secretKeyRef:
+                          name: "[[$.SecretAdminCredentials]]"
+                          key: username
+                    - name: KIE_ADMIN_PWD
+                      valueFrom:
+                        secretKeyRef:
+                          name: "[[$.SecretAdminCredentials]]"
+                          key: password
+                    #[[end]]
                     - name: KIE_SERVER_STARTUP_STRATEGY
                       value: "[[.StartupStrategy.StrategyName]]"
                     #[[if eq .StartupStrategy.StrategyName "OpenShiftStartupStrategy" ]]
@@ -803,10 +845,24 @@ servers:
                           fieldPath: metadata.labels['services.server.kie.org/kie-server-id']
                     - name: KIE_SERVER_ROUTE_NAME
                       value: "[[.KieName]]"
+                    #[[if not $.SecretAdminCredentials]]
                     - name: "[[$.Constants.MavenRepo]]_MAVEN_REPO_USERNAME"
                       value: "[[$.AdminUser]]"
                     - name: "[[$.Constants.MavenRepo]]_MAVEN_REPO_PASSWORD"
                       value: "[[$.AdminPassword]]"
+                    #[[end]]
+                    #[[if $.SecretAdminCredentials]]
+                    - name: "[[$.Constants.MavenRepo]]_MAVEN_REPO_USERNAME"
+                      valueFrom:
+                        secretKeyRef:
+                          name: "[[$.SecretAdminCredentials]]"
+                          key: username
+                    - name: "[[$.Constants.MavenRepo]]_MAVEN_REPO_PASSWORD"
+                      valueFrom:
+                        secretKeyRef:
+                          name: "[[$.SecretAdminCredentials]]"
+                          key: password
+                    #[[end]]
                     - name: "[[$.Constants.MavenRepo]]_MAVEN_REPO_SERVICE"
                       value: "[[$.ApplicationName]]-[[$.Console.Name]]"
                     - name: MAVEN_REPOS
